--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "vue-svg-loader": "^0.16.0"
   },
   "eslintConfig": {
     "root": true,
