--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "v-calendar": "^1.0.6",
     "vue": "^2.6.11",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6",
