--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "dayjs": "^1.8.27",
     "element-ui": "^2.4.5",
     "v-calendar": "^1.0.6",
     "vue": "^2.6.11",
